--- a/GoogleAppEngineSampleApp/app.yaml
+++ b/GoogleAppEngineSampleApp/app.yaml
@@ -1,8 +1,13 @@
 application: <YOUR_GOOGLE_APP_NAME>
 version: 1
-runtime: python
+runtime: python27
 api_version: 1
+threadsafe: false
 
 handlers:
 - url: /.*
   script: main.py
+
+libraries:
+- name: django
+  version: "latest"
