--- a/JREngagePhonegapPlugin/.classpath
+++ b/JREngagePhonegapPlugin/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="D:/Hema/Janrain/SDKs/phonegap-2.7.0/lib/android/cordova-2.7.0.jar"/>
+	<classpathentry kind="lib" path="./libs/cordova-3.0.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
