--- a/Samples/SimpleDemo/AndroidManifest.xml
+++ b/Samples/SimpleDemo/AndroidManifest.xml
@@ -9,10 +9,10 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
 
-    <uses-sdk android:minSdkVersion="17" android:targetSdkVersion="23" />
+    <uses-sdk android:minSdkVersion="17" android:targetSdkVersion="25" />
 
     <application
-        android:name="com.janrain.android.simpledemo.SimpleDemoApplication"
+        android:name="SimpleDemoApplication"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:hardwareAccelerated="true"
@@ -32,6 +32,40 @@
             />
         <activity android:name="com.janrain.android.simpledemo.UpdateProfileActivity" />
         <activity android:name="com.janrain.android.simpledemo.LinkListActivity"/>
+        <!--
+        This activity declaration is merged with the version from the library manifest.
+        It demonstrates how an https redirect can be captured, in addition to or instead of
+        a custom scheme.
+
+        Generally, this should be done in conjunction with an app link declaration for Android M
+        and above, for additional security and an improved user experience. See:
+
+        https://developer.android.com/training/app-links/index.html
+
+        The declaration from the library can be completely replaced by adding
+
+        tools:node="replace"
+
+        To the list of attributes on the activity element.
+        -->
+        <activity android:name="net.openid.appauth.RedirectUriReceiverActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="https"
+                    android:host="com.googleusercontent.apps.169582807084-bk8a4jintrtka452cj1v610s588riapp"
+                    android:path="/oauth2redirect"/>
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.janrain.android.engage.OpenIDAppAuthTokenActivity"
+            android:label="SimpleDemoApplication"
+            android:theme="@style/Theme.Janrain.Dialog.Light"
+            android:windowSoftInputMode="stateHidden" >
+        </activity>
+
 
         <!-- The following activities are for the Janrain Engage for Android library -->
         <!-- This activity must have a dialog theme such as Theme.Holo.Dialog, or
