--- a/Samples/SimpleDemo/build.gradle
+++ b/Samples/SimpleDemo/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.+'
+        classpath 'com.android.tools.build:gradle:2.2.3'
     }
 }
 apply plugin: 'com.android.application'
@@ -17,26 +17,29 @@ repositories {
 
 dependencies {
     //compile fileTree(dir: 'libs', include: '*.jar')
-    compile files('libs/org.apache.http.legacy.jar')
     compile 'com.google.code.gson:gson:2.2.4'
     compile project(':jump')
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     //If building with strict Android 6.0 the following will need to be uncommented
     //See: https://developer.android.com/about/versions/marshmallow/android-6.0-changes.html
     //And: http://stackoverflow.com/questions/31653002/how-to-use-the-legacy-apache-http-client-on-android-m
-    useLibrary "org.apache.http.legacy"
 
 
     defaultConfig {
         applicationId "com.janrain.android.simpledemo"
         minSdkVersion 17  //14?
-        targetSdkVersion 23
+        targetSdkVersion 25
         multiDexEnabled = false
+        // replace the below string with your own Google client ID. Make sure this is consistent
+        // with the values used in openid_appauth_idp_configs.xml
+        manifestPlaceholders = [
+                'appAuthRedirectScheme': 'com.googleusercontent.apps.169582807084-bk8a4jintrtka452cj1v610s588riapp'
+        ]
     }
 
     sourceSets {
