--- a/Samples/SimpleDemoNative/build.gradle
+++ b/Samples/SimpleDemoNative/build.gradle
@@ -30,11 +30,12 @@ dependencies {
 
     //jcenter mavencentral conflict - locally imported Facebook SDK aar
     //Cardview required for Facebook SDK 4.9.0
-    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:cardview-v7:24.1.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
     //http://stackoverflow.com/questions/21882804/adding-local-aar-files-to-my-gradle-build
     compile project(':facebook-android-sdk-4.9.0')
     compile project(':jump')
-    compile('com.twitter.sdk.android:twitter:1.12.0@aar') {
+    compile('com.twitter.sdk.android:twitter:2.3.1@aar') {
         transitive = true;
     }
 }
