--- a/Samples/SimpleDemo/build.gradle
+++ b/Samples/SimpleDemo/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 apply plugin: 'com.android.application'
 
 repositories {
-    jcenter { url "http://jcenter.bintray.com/"}
+    jcenter()
     maven { url 'https://maven.fabric.io/public' }
 }
 
