Update JCenter in build.gradle

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ Thumbs.db
 .project
 
 # Android Studio
+local.properties
 *.iml
 .idea
 #.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
