--- a/Samples/SimpleDemoNative/build.gradle
+++ b/Samples/SimpleDemoNative/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        jcenter { url "http://jcenter.bintray.com/" }
+        jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
@@ -14,7 +14,7 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.fabric'
 
 repositories {
-    jcenter { url "http://jcenter.bintray.com/" }
+    jcenter()
     maven { url 'https://maven.fabric.io/public' }
 }
 
