--- a/Samples/SimpleDemoNative/.gitignore
+++ b/Samples/SimpleDemoNative/.gitignore
@@ -47,6 +47,7 @@ jump/.gradle/**/*
 jump/build/**
 jump/build/**/*
 Samples/SimpleDemo/build
+Samples/SimpleDemo/local.properties
 Samples/SimpleDemo/*.iml
 Samples/SimpleDemo/SimpleDemo.iml
 Samples/SimpleDemo/gradlew
@@ -68,6 +69,7 @@ Samples/SimpleDemoNative/.idea
 Samples/SimpleDemoNative/.gradle
 Samples/SimpleDemoNative/.gradle/**
 Samples/SimpleDemoNative/.gradle/**/*
+Samples/SimpleDemoNative/local.properties
 Samples/SimpleDemoNative/build
 Samples/SimpleDemoNative/build/**
 Samples/SimpleDemoNative/build/**/*
