--- a/Samples/SimpleDemoNative/jump/.gitignore
+++ b/Samples/SimpleDemoNative/jump/.gitignore
@@ -27,6 +27,7 @@ Thumbs.db
 .project
 
 # Android Studio
+local.properties
 *.iml
 .idea
 #.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
@@ -46,6 +47,7 @@ jump/.gradle/**/*
 jump/build/**
 jump/build/**/*
 Samples/SimpleDemo/build
+Samples/SimpleDemo/local.properties
 Samples/SimpleDemo/*.iml
 Samples/SimpleDemo/SimpleDemo.iml
 Samples/SimpleDemo/gradlew
@@ -67,6 +69,7 @@ Samples/SimpleDemoNative/.idea
 Samples/SimpleDemoNative/.gradle
 Samples/SimpleDemoNative/.gradle/**
 Samples/SimpleDemoNative/.gradle/**/*
+Samples/SimpleDemoNative/local.properties
 Samples/SimpleDemoNative/build
 Samples/SimpleDemoNative/build/**
 Samples/SimpleDemoNative/build/**/*
