--- a/Samples/SimpleDemoNative/build.gradle
+++ b/Samples/SimpleDemoNative/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.3.0'
         classpath 'com.google.gms:google-services:1.3.0'
         classpath 'io.fabric.tools:gradle:1.+'
     }
@@ -20,7 +20,7 @@ repositories {
 
 
 dependencies {
-    compile files('libs/org.apache.http.legacy.jar')
+    //compile files('libs/org.apache.http.legacy.jar')
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.twitter:twitter-text:1.13.0'
