--- a/Samples/SimpleDemoNative/AndroidManifest.xml
+++ b/Samples/SimpleDemoNative/AndroidManifest.xml
@@ -75,7 +75,7 @@
 
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="UPDATE" />
+            android:value="fbb7bb73de5c88fb8942e7590b7bf60735b59f3d" />
     </application>
 
 </manifest>
