--- a/Samples/EngageOnly/jump/.gitignore
+++ b/Samples/EngageOnly/jump/.gitignore
@@ -45,39 +45,39 @@ jump/.gradle/**
 jump/.gradle/**/*
 jump/build/**
 jump/build/**/*
-Samples/EngageOnly/build
-Samples/EngageOnly/*.iml
-Samples/EngageOnly/EngageOnly.iml
-Samples/EngageOnly/gradlew
-Samples/EngageOnly/gradle/
-Samples/EngageOnly/jump/jump.iml
-Samples/EngageOnly/build/**
-Samples/EngageOnly/build/**/*
-Samples/EngageOnly/*.iml
-Samples/EngageOnly/.idea
-Samples/EngageOnly/.gradle
-Samples/EngageOnly/.gradle/**
-Samples/EngageOnly/.gradle/**/*
-Samples/EngageOnly/build
-Samples/EngageOnly/jump/build
-Samples/EngageOnly/jump/build/**
-Samples/EngageOnly/jump/build/**/*
-Samples/EngageOnlyNative/*.iml
-Samples/EngageOnlyNative/.idea
-Samples/EngageOnlyNative/.gradle
-Samples/EngageOnlyNative/.gradle/**
-Samples/EngageOnlyNative/.gradle/**/*
-Samples/EngageOnlyNative/build
-Samples/EngageOnlyNative/build/**
-Samples/EngageOnlyNative/build/**/*
-Samples/EngageOnlyNative/jump/*.iml
-Samples/EngageOnlyNative/jump/.idea
-Samples/EngageOnlyNative/jump/.gradle
-Samples/EngageOnlyNative/jump/.gradle/**
-Samples/EngageOnlyNative/jump/.gradle/**/*
-Samples/EngageOnlyNative/jump/build
-Samples/EngageOnlyNative/jump/build/**
-Samples/EngageOnlyNative/jump/build/**/*
+Samples/SimpleDemo/build
+Samples/SimpleDemo/*.iml
+Samples/SimpleDemo/SimpleDemo.iml
+Samples/SimpleDemo/gradlew
+Samples/SimpleDemo/gradle/
+Samples/SimpleDemo/jump/jump.iml
+Samples/SimpleDemo/build/**
+Samples/SimpleDemo/build/**/*
+Samples/SimpleDemo/*.iml
+Samples/SimpleDemo/.idea
+Samples/SimpleDemo/.gradle
+Samples/SimpleDemo/.gradle/**
+Samples/SimpleDemo/.gradle/**/*
+Samples/SimpleDemo/build
+Samples/SimpleDemo/jump/build
+Samples/SimpleDemo/jump/build/**
+Samples/SimpleDemo/jump/build/**/*
+Samples/SimpleDemoNative/*.iml
+Samples/SimpleDemoNative/.idea
+Samples/SimpleDemoNative/.gradle
+Samples/SimpleDemoNative/.gradle/**
+Samples/SimpleDemoNative/.gradle/**/*
+Samples/SimpleDemoNative/build
+Samples/SimpleDemoNative/build/**
+Samples/SimpleDemoNative/build/**/*
+Samples/SimpleDemoNative/jump/*.iml
+Samples/SimpleDemoNative/jump/.idea
+Samples/SimpleDemoNative/jump/.gradle
+Samples/SimpleDemoNative/jump/.gradle/**
+Samples/SimpleDemoNative/jump/.gradle/**/*
+Samples/SimpleDemoNative/jump/build
+Samples/SimpleDemoNative/jump/build/**
+Samples/SimpleDemoNative/jump/build/**/*
 
 #NDK
 obj/
