--- a/Samples/SimpleDemoNative/build.gradle
+++ b/Samples/SimpleDemoNative/build.gradle
@@ -4,14 +4,13 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.google.gms:google-services:1.3.0'
         classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-apply plugin: 'io.fabric'
 
 repositories {
     jcenter()
@@ -35,9 +34,7 @@ dependencies {
     //http://stackoverflow.com/questions/21882804/adding-local-aar-files-to-my-gradle-build
     compile project(':facebook-android-sdk-4.18.0')
     compile project(':jump')
-    compile('com.twitter.sdk.android:twitter:2.3.1@aar') {
-        transitive = true;
-    }
+    compile 'com.twitter.sdk.android:twitter:3.1.1'
 }
 
 android {
