--- a/Samples/SimpleDemoNative/res/raw/janrain_config.json
+++ b/Samples/SimpleDemoNative/res/raw/janrain_config.json
@@ -13,14 +13,18 @@
   "captureEditUserProfileFormName": "editProfileForm",
   "captureEnableThinRegistration": false,
   "captureForgotPasswordFormName": "forgotPasswordForm",
-  "AppAuth": {
-    "client_id": "",
-    "redirect_uri": "net.openid.appauthdemo:/oauth2redirect",
-    "authorization_scope": "openid email profile",
-    "discovery_uri": "",
-    "authorization_endpoint_uri": "",
-    "token_endpoint_uri": "",
-    "registration_endpoint_uri": "",
-    "https_required": true
-  }
+  "openIDIdentityProviders": [
+    {
+      "name": "Google",
+      "enabled": "true",
+      "client_id": "",
+      "redirect_uri": "net.openid.appauthdemo:/oauth2redirect",
+      "authorization_scope": "openid email profile",
+      "discovery_uri": "",
+      "authorization_endpoint_uri": "",
+      "token_endpoint_uri": "",
+      "registration_endpoint_uri": "",
+      "https_required": true
+    }
+  ]
 }
