--- a/Samples/SimpleDemoNative/res/raw/janrain_config.json
+++ b/Samples/SimpleDemoNative/res/raw/janrain_config.json
@@ -17,10 +17,10 @@
     {
       "name": "Google",
       "enabled": "true",
-      "client_id": "",
-      "redirect_uri": "net.openid.appauthdemo:/oauth2redirect",
+      "client_id": "UPDATE.apps.googleusercontent.com",
+      "redirect_uri": "com.googleusercontent.apps.UPDATE:/oauth2redirect",
       "authorization_scope": "openid email profile",
-      "discovery_uri": "",
+      "discovery_uri": "https://accounts.google.com/.well-known/openid-configuration",
       "authorization_endpoint_uri": "",
       "token_endpoint_uri": "",
       "registration_endpoint_uri": "",
