--- a/Samples/SimpleDemoNative/build.gradle
+++ b/Samples/SimpleDemoNative/build.gradle
@@ -1,3 +1,6 @@
+apply plugin: 'com.android.application'
+
+
 buildscript {
     repositories {
         jcenter()
@@ -5,26 +8,27 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.google.gms:google-services:1.3.0'
+        classpath 'com.google.gms:google-services:3.1.0'
     }
 }
-apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
+
 
 repositories {
     jcenter()
-    maven { url 'https://maven.fabric.io/public' }
+    maven {
+        url "https://maven.google.com" // Google's Maven repository
+    }
 }
-
 
 dependencies {
     //compile files('libs/org.apache.http.legacy.jar')
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.twitter:twitter-text:1.13.0'
-    compile 'com.google.android.gms:play-services:8.1.0'
-    compile 'com.google.android.gms:play-services-plus:8.1.0'
-    compile 'com.google.android.gms:play-services-identity:8.1.0'
+    //compile 'com.google.android.gms:play-services:9.8.0'
+    compile 'com.google.android.gms:play-services:9.8.0'
+    compile 'com.google.android.gms:play-services-plus:9.8.0'
+    compile 'com.google.android.gms:play-services-auth:9.8.0'
 
     //jcenter mavencentral conflict - locally imported Facebook SDK aar
     //Cardview required for Facebook SDK 4.9.0
@@ -35,6 +39,8 @@ dependencies {
     compile project(':jump')
     compile 'com.twitter.sdk.android:twitter:3.1.1'
 }
+
+
 
 android {
     compileSdkVersion 25
@@ -56,7 +62,7 @@ android {
         // Replace the below string with your own Google client ID. Make sure this is consistent
         // with the values used in openid_appauth_idp_configs.xml
         manifestPlaceholders = [
-                'appAuthRedirectScheme': 'com.googleusercontent.apps.UPDATE_WITH_GOOGLE_CLIENT_ID'
+                'appAuthRedirectScheme': 'com.googleusercontent.apps.com.googleusercontent.apps.169582807084-bk8a4jintrtka452cj1v610s588riapp'
         ]
     }
 
@@ -93,3 +99,5 @@ allprojects {
         }
     }
 }
+
+apply plugin: 'com.google.gms.google-services'
