--- a/Samples/SimpleDemoNative/build.gradle
+++ b/Samples/SimpleDemoNative/build.gradle
@@ -18,20 +18,15 @@ repositories {
 }
 
 dependencies {
-    //compile files('libs/org.apache.http.legacy.jar')
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.twitter:twitter-text:1.13.0'
-    //compile 'com.google.android.gms:play-services:9.8.0'
     compile 'com.google.android.gms:play-services:9.8.0'
     compile 'com.google.android.gms:play-services-plus:9.8.0'
     compile 'com.google.android.gms:play-services-auth:9.8.0'
-
-    //jcenter mavencentral conflict - locally imported Facebook SDK aar
-    //Cardview required for Facebook SDK 4.9.0
+    //Cardview required for Facebook SDK
     compile 'com.android.support:cardview-v7:24.1.0'
     compile 'com.android.support:appcompat-v7:24.2.1'
-    //http://stackoverflow.com/questions/21882804/adding-local-aar-files-to-my-gradle-build
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile project(':jump')
     compile 'com.twitter.sdk.android:twitter:3.1.1'
