--- a/Samples/SimpleDemo/res/raw/janrain_config.json
+++ b/Samples/SimpleDemo/res/raw/janrain_config.json
@@ -1,11 +1,11 @@
 {
-  "engageAppId": "UPDATE",
-  "captureDomain": "UPDATE.janraincapture.com",
-  "captureClientId": "UPDATE",
+  "engageAppId": "appcfamhnpkagijaeinl",
+  "captureDomain": "mobile-dev.janraincapture.com",
+  "captureClientId": "9vt2ej43mxyftkf68c3xthkm2rtweg8w",
   "captureLocale": "en-US",
   "captureTraditionalSignInFormName": "userInformationForm",
-  "traditionalSignInType": "Jump.TraditionalSignInType.EMAIL",
-  "captureAppId": "UPDATE",
+  "traditionalSignInType": "EMAIL",
+  "captureAppId": "rz47skmnm48jpcv3bh4eguv4b8",
   "captureFlowName": "standard_flow",
   "captureFlowVersion": "HEAD",
   "captureSocialRegistrationFormName": "socialRegistrationForm",
