MOB-388 Fix native demo app json config file.

--- a/Samples/SimpleDemoNative/res/raw/janrain_config.json
+++ b/Samples/SimpleDemoNative/res/raw/janrain_config.json
@@ -4,7 +4,7 @@
   "captureClientId": "UPDATE",
   "captureLocale": "en-US",
   "captureTraditionalSignInFormName": "userInformationForm",
-  "traditionalSignInType": "Jump.TraditionalSignInType.EMAIL",
+  "traditionalSignInType": "EMAIL",
   "captureAppId": "UPDATE",
   "captureFlowName": "standard_flow",
   "captureFlowVersion": "HEAD",
