Remove user-specific project files. Update .gitignore files accordingly.

--- a/Samples/SimpleDemoNative/.gitignore
+++ b/Samples/SimpleDemoNative/.gitignore
@@ -28,61 +28,14 @@ Thumbs.db
 .classpath
 .project
 
+
 # Android Studio
 local.properties
 *.iml
-.idea
-#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
-.idea
-.gradle
-.gradle/**
-.gradle/**/*
-build
-build/**
-build/**/*
-jump/build
-jump/*.iml
-jump/.idea
-jump/.gradle
-jump/.gradle/**
-jump/.gradle/**/*
-jump/build/**
-jump/build/**/*
-Samples/SimpleDemo/build
-Samples/SimpleDemo/local.properties
-Samples/SimpleDemo/*.iml
-Samples/SimpleDemo/SimpleDemo.iml
-Samples/SimpleDemo/gradlew
-Samples/SimpleDemo/gradle/
-Samples/SimpleDemo/jump/jump.iml
-Samples/SimpleDemo/build/**
-Samples/SimpleDemo/build/**/*
-Samples/SimpleDemo/*.iml
-Samples/SimpleDemo/.idea
-Samples/SimpleDemo/.gradle
-Samples/SimpleDemo/.gradle/**
-Samples/SimpleDemo/.gradle/**/*
-Samples/SimpleDemo/build
-Samples/SimpleDemo/jump/build
-Samples/SimpleDemo/jump/build/**
-Samples/SimpleDemo/jump/build/**/*
-Samples/SimpleDemoNative/*.iml
-Samples/SimpleDemoNative/.idea
-Samples/SimpleDemoNative/.gradle
-Samples/SimpleDemoNative/.gradle/**
-Samples/SimpleDemoNative/.gradle/**/*
-Samples/SimpleDemoNative/local.properties
-Samples/SimpleDemoNative/build
-Samples/SimpleDemoNative/build/**
-Samples/SimpleDemoNative/build/**/*
-Samples/SimpleDemoNative/jump/*.iml
-Samples/SimpleDemoNative/jump/.idea
-Samples/SimpleDemoNative/jump/.gradle
-Samples/SimpleDemoNative/jump/.gradle/**
-Samples/SimpleDemoNative/jump/.gradle/**/*
-Samples/SimpleDemoNative/jump/build
-Samples/SimpleDemoNative/jump/build/**
-Samples/SimpleDemoNative/jump/build/**/*
+.gradle/
+build/
+/*/build*
+.idea/
 
 #NDK
 obj/
