MOB-388 Add missing json configurations for SimpleDemo app. Fix json files format.

--- a/Samples/SimpleDemo/res/raw/janrain_config.json
+++ b/Samples/SimpleDemo/res/raw/janrain_config.json
@@ -12,5 +12,19 @@
   "captureTraditionalRegistrationFormName": "registrationForm",
   "captureEditUserProfileFormName": "editProfileForm",
   "captureEnableThinRegistration": false,
-  "captureForgotPasswordFormName": "forgotPasswordForm"
+  "captureForgotPasswordFormName": "forgotPasswordForm",
+  "openIDIdentityProviders": [
+    {
+      "name": "Google",
+      "enabled": "true",
+      "client_id": "UPDATE.apps.googleusercontent.com",
+      "redirect_uri": "com.googleusercontent.apps.UPDATE:/oauth2redirect",
+      "authorization_scope": "openid email profile",
+      "discovery_uri": "https://accounts.google.com/.well-known/openid-configuration",
+      "authorization_endpoint_uri": "",
+      "token_endpoint_uri": "",
+      "registration_endpoint_uri": "",
+      "https_required": true
+    }
+  ]
 }
