MOB-388 Fix problem with non-native google+ login in SimpleDemoNative app.

--- a/Samples/SimpleDemoNative/build.gradle
+++ b/Samples/SimpleDemoNative/build.gradle
@@ -53,9 +53,9 @@ android {
 
         // If using web-based (not native) Google authentication.
         // Replace the below string with your own Google client ID. Make sure this is consistent
-        // with the values used in openid_appauth_idp_configs.xml
+        // with the values used in janrain_config.json
         manifestPlaceholders = [
-                'appAuthRedirectScheme': 'com.googleusercontent.apps.UPDATE_WITH_GOOGLE_CLIENT_ID'
+                'appAuthRedirectScheme': 'com.googleusercontent.apps.UPDATE'
         ]
     }
 
