--- a/Samples/SimpleDemoNative/jump/build.gradle
+++ b/Samples/SimpleDemoNative/jump/build.gradle
@@ -12,9 +12,9 @@ android {
         minSdkVersion 17
         targetSdkVersion 25
         // replace the below string with your own Google client ID. Make sure this is consistent
-        // with the values used in openid_appauth_idp_configs.xml
+        // with the values used in janrain_config.json
         manifestPlaceholders = [
-                'appAuthRedirectScheme': 'com.googleusercontent.apps.UPDTE'
+                'appAuthRedirectScheme': 'com.googleusercontent.apps.UPDATE'
         ]
     }
 
