--- a/Samples/SimpleDemo/res/raw/janrain_config.json
+++ b/Samples/SimpleDemo/res/raw/janrain_config.json
@@ -1,12 +1,12 @@
 {
   "engageAppId": "appcfamhnpkagijaeinl",
   "captureDomain": "mobile-dev.janraincapture.com",
-  "captureClientId": "9vt2ej43mxyftkf68c3xthkm2rtweg8w",
+  "captureClientId": "xwvdh3ck2vyyzumgnj3wf34d8xkchzm9",
   "captureLocale": "en-US",
   "captureTraditionalSignInFormName": "userInformationForm",
   "traditionalSignInType": "EMAIL",
   "captureAppId": "rz47skmnm48jpcv3bh4eguv4b8",
-  "captureFlowName": "standard_flow",
+  "captureFlowName": "standard",
   "captureFlowVersion": "HEAD",
   "captureSocialRegistrationFormName": "socialRegistrationForm",
   "captureTraditionalRegistrationFormName": "registrationForm",
