MOB-403 Upgrade SimpleDemoNative project to AndroidStudio 3. Fix library and app compatibility issues.

--- a/Samples/SimpleDemoNative/AndroidManifest.xml
+++ b/Samples/SimpleDemoNative/AndroidManifest.xml
@@ -71,6 +71,7 @@
             android:configChanges="orientation|screenSize"
             android:theme="@style/Theme.Janrain"
             android:windowSoftInputMode="adjustResize|stateHidden"
+            tools:replace="android:theme"
             />
 
         <!--
