MOB-406 Update Jump library's .gitignore file.

--- a/Jump/.gitignore
+++ b/Jump/.gitignore
@@ -27,76 +27,13 @@ Thumbs.db
 .project
 
 # Android Studio
+local.properties
 *.iml
-.idea
-#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
-.idea
-.gradle
-.gradle/**
-.gradle/**/*
-build
-build/**
-build/**/*
-jump/build
-jump/*.iml
-jump/.idea
-jump/.gradle
-jump/.gradle/**
-jump/.gradle/**/*
-jump/build/**
-jump/build/**/*
-Samples/SimpleDemo/build
-Samples/SimpleDemo/*.iml
-Samples/SimpleDemo/SimpleDemo.iml
-Samples/SimpleDemo/gradlew
-Samples/SimpleDemo/gradle/
-Samples/SimpleDemo/jump/jump.iml
-Samples/SimpleDemo/build/**
-Samples/SimpleDemo/build/**/*
-Samples/SimpleDemo/*.iml
-Samples/SimpleDemo/.idea
-Samples/SimpleDemo/.gradle
-Samples/SimpleDemo/.gradle/**
-Samples/SimpleDemo/.gradle/**/*
-Samples/SimpleDemo/build
-Samples/SimpleDemo/jump/build
-Samples/SimpleDemo/jump/build/**
-Samples/SimpleDemo/jump/build/**/*
-Samples/SimpleDemoNative/*.iml
-Samples/SimpleDemoNative/.idea
-Samples/SimpleDemoNative/.gradle
-Samples/SimpleDemoNative/.gradle/**
-Samples/SimpleDemoNative/.gradle/**/*
-Samples/SimpleDemoNative/build
-Samples/SimpleDemoNative/build/**
-Samples/SimpleDemoNative/build/**/*
-Samples/SimpleDemoNative/jump/*.iml
-Samples/SimpleDemoNative/jump/.idea
-Samples/SimpleDemoNative/jump/.gradle
-Samples/SimpleDemoNative/jump/.gradle/**
-Samples/SimpleDemoNative/jump/.gradle/**/*
-Samples/SimpleDemoNative/jump/build
-Samples/SimpleDemoNative/jump/build/**
-Samples/SimpleDemoNative/jump/build/**/*
-Samples/EngageOnly/build
-Samples/EngageOnly/local.properties
-Samples/EngageOnly/*.iml
-Samples/EngageOnly/EngageOnly.iml
-Samples/EngageOnly/gradlew
-Samples/EngageOnly/gradle/
-Samples/EngageOnly/jump/jump.iml
-Samples/EngageOnly/build/**
-Samples/EngageOnly/build/**/*
-Samples/EngageOnly/*.iml
-Samples/EngageOnly/.idea
-Samples/EngageOnly/.gradle
-Samples/EngageOnly/.gradle/**
-Samples/EngageOnly/.gradle/**/*
-Samples/EngageOnly/build
-Samples/EngageOnly/jump/build
-Samples/EngageOnly/jump/build/**
-Samples/EngageOnly/jump/build/**/*
-Samples/EngageOnly/*.iml
+.gradle/
+build/
+/*/build*
+.idea/
+
 
 #NDK
 obj/
