MOB-406 Fix Gradle problem when updating project from the old, local libraries.

--- a/Samples/EngageOnly/settings.gradle
+++ b/Samples/EngageOnly/settings.gradle
@@ -1,2 +1,2 @@
-include ':jump'
-project(':jump').projectDir = new File('../../Jump')
+include ':Jump'
+project(':Jump').projectDir = new File('../../Jump')
