--- a/Samples/EngageOnly/build.gradle
+++ b/Samples/EngageOnly/build.gradle
@@ -18,7 +18,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.1.0'
-    compile project(':jump')
+    compile project(':Jump')
 }
 
 android {
