--- a/Samples/SimpleDemo/build.gradle
+++ b/Samples/SimpleDemo/build.gradle
@@ -16,7 +16,7 @@ repositories {
 dependencies {
     //compile fileTree(dir: 'libs', include: '*.jar')
     compile 'com.google.code.gson:gson:2.2.4'
-    compile project(':jump')
+    compile project(':Jump')
 }
 
 android {
