--- a/Samples/SimpleDemoNative/build.gradle
+++ b/Samples/SimpleDemoNative/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.1.0'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile project(':jump')
+    compile project(':Jump')
     compile 'com.twitter.sdk.android:twitter:3.1.1'
 }
 
