MOB-408 Fix change password problems.

--- a/Samples/SimpleDemoNative/AndroidManifest.xml
+++ b/Samples/SimpleDemoNative/AndroidManifest.xml
@@ -43,6 +43,7 @@
 
         <activity android:name=".RegistrationActivity"
             />
+        <activity android:name=".ChangePasswordActivity" />
         <activity android:name=".UpdateProfileActivity" />
         <activity android:name=".LinkListActivity"/>
 
