--- a/Samples/SimpleDemo/res/raw/janrain_config.json
+++ b/Samples/SimpleDemo/res/raw/janrain_config.json
@@ -13,6 +13,7 @@
   "captureEditUserProfileFormName": "editProfileForm",
   "captureEnableThinRegistration": false,
   "captureForgotPasswordFormName": "forgotPasswordForm",
+  "captureResendEmailVerificationFormName":"resendVerificationForm",
   "openIDIdentityProviders": [
     {
       "name": "Google",
