--- a/Samples/SimpleDemoNative/res/raw/janrain_config.json
+++ b/Samples/SimpleDemoNative/res/raw/janrain_config.json
@@ -1,11 +1,11 @@
 {
-  "engageAppId": "UPDATE",
-  "captureDomain": "UPDATE.janraincapture.com",
-  "captureClientId": "UPDATE",
+  "engageAppId": "appcfamhnpkagijaeinl",
+  "captureDomain": "mobile-dev.janraincapture.com",
+  "captureClientId": "xwvdh3ck2vyyzumgnj3wf34d8xkchzm9",
   "captureLocale": "en-US",
   "captureTraditionalSignInFormName": "signInForm",
   "traditionalSignInType": "EMAIL",
-  "captureAppId": "UPDATE",
+  "captureAppId": "rz47skmnm48jpcv3bh4eguv4b8",
   "captureFlowName": "standard",
   "captureFlowVersion": "HEAD",
   "captureSocialRegistrationFormName": "socialRegistrationForm",
@@ -18,8 +18,8 @@
     {
       "name": "Google",
       "enabled": "true",
-      "client_id": "UPDATE.apps.googleusercontent.com",
-      "redirect_uri": "com.googleusercontent.apps.UPDATE:/oauth2redirect",
+      "client_id": "169582807084-bk8a4jintrtka452cj1v610s588riapp.apps.googleusercontent.com",
+      "redirect_uri": "com.googleusercontent.apps.169582807084-bk8a4jintrtka452cj1v610s588riapp:/oauth2redirect",
       "authorization_scope": "openid email profile",
       "discovery_uri": "https://accounts.google.com/.well-known/openid-configuration",
       "authorization_endpoint_uri": "",
