--- a/Samples/SimpleDemoNative/res/raw/simple_demo_native_config_sample.json
+++ b/Samples/SimpleDemoNative/res/raw/simple_demo_native_config_sample.json
@@ -1,5 +1,5 @@
 {
-  "twitter_key": "D8H3uHM6EiyeB4197XiXi0axP",
+  "twitter_key": "UPDATE",
   "twitter_secret": "UPDATE",
-  "google_signin_engage_app_client_id":"169582807084-g0mgrleeqga1bu056jupm2k5p7fpg8q7.apps.googleusercontent.com"
+  "google_signin_engage_app_client_id":"UPDATE.apps.googleusercontent.com"
 }
