--- a/Samples/SimpleDemoNative/.gitignore
+++ b/Samples/SimpleDemoNative/.gitignore
@@ -3,6 +3,7 @@ janrain_config.json
 simple_demo_native_config.json
 fabric.properties
 google-services.json
+*.backup
 *.DS_Store
 #built application files
 *.apk
