Updated .gitignoreand cleared out ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -80,5 +80,12 @@ Samples/SimpleDemoNative/jump/build
 Samples/SimpleDemoNative/jump/build/**
 Samples/SimpleDemoNative/jump/build/**/*
 
+Samples/SimpleDemoNative/extracas
+Samples/SimpleDemoNative/network_security_config.xml
+Samples/SimpleDemoNative/res/raw/janrain_config.json
+Samples/SimpleDemoNative/res/raw/simple_demo_native_config.json
+Samples/SimpleDemoNative/fabric.properties
+Samples/SimpleDemoNative/google-services.json
+
 #NDK
 obj/
