Updated .gitignoreand cleared out ignored files

--- a/Samples/SimpleDemoNative/res/raw/janrain_config_sample.json
+++ b/Samples/SimpleDemoNative/res/raw/janrain_config_sample.json
@@ -1,11 +1,11 @@
 {
-  "engageAppId": "appcfamhnpkagijaeinl",
-  "captureDomain": "mobile-dev.janraincapture.com",
-  "captureClientId": "xwvdh3ck2vyyzumgnj3wf34d8xkchzm9",
+  "engageAppId": "UPDATE",
+  "captureDomain": "UPDATE.janraincapture.com",
+  "captureClientId": "UPDATE",
   "captureLocale": "en-US",
   "captureTraditionalSignInFormName": "signInForm",
   "traditionalSignInType": "EMAIL",
-  "captureAppId": "rz47skmnm48jpcv3bh4eguv4b8",
+  "captureAppId": "UPDATE",
   "captureFlowName": "standard",
   "captureFlowVersion": "HEAD",
   "captureSocialRegistrationFormName": "socialRegistrationForm",
@@ -18,7 +18,7 @@
     {
       "name": "Google",
       "enabled": "true",
-      client_id": "UPDATE.apps.googleusercontent.com",
+      "client_id": "UPDATE.apps.googleusercontent.com",
       "redirect_uri": "com.googleusercontent.apps.UPDATE:/oauth2redirect",
       "authorization_scope": "openid email profile",
       "discovery_uri": "https://accounts.google.com/.well-known/openid-configuration",
