--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ Samples/SimpleDemoNative/jump/build
 Samples/SimpleDemoNative/jump/build/**
 Samples/SimpleDemoNative/jump/build/**/*
 
+Samples/SimpleDemoNative/res/values/strings.xml
 Samples/SimpleDemoNative/extracas
 Samples/SimpleDemoNative/network_security_config.xml
 Samples/SimpleDemoNative/res/raw/janrain_config.json
